<resources>
    <string name="app_name">Fully Functional App</string>
    <string name="welcome_message">Welcome to Meet\'s Knowledge Hub</string>
    <string name="let_s_go">Let\'s Go</string>
    <string name="android_development_icon">Android Development icon</string>
    <string name="android_app_development">Android App Development</string>
    <string name="web_development">Web Development</string>
    <string name="ios_development">iOS Development</string>
    <string name="ai_ml">AI/ML</string>
    <string name="blockchain">Blockchain</string>
    <string name="cyber_security">Cyber Security</string>
    <string name="call_us">Call us</string>
    <string name="ios_development_logo">iOS Development logo</string>
    <string name="web_development_logo">Web Development logo</string>
    <string name="ai_ml_logo">AI/ML logo</string>
    <string name="blockchain_logo">Blockchain logo</string>
    <string name="cyber_security_logo">Cyber security logo</string>
    <string name="call_us_logo">Call us logo</string>
    <string name="welcome_image">Welcome image</string>
    <string name="android_development">Android Development</string>
    <string name="front_end_technologies">Front-end Technologies:</string>
    <string name="front_end_technology_image">Front end technology image</string>
    <string name="back_end_technologies">Back-end Technologies:</string>
    <string name="back_end_technology_image">Back end technology image</string>
    <string name="database_technologies">Database Technologies:</string>
    <string name="database_technology_image">Database technology image</string>
    <string name="ai_ml_title">AI/ML(Artificial Intelligence/ Machine learning)</string>
    <string name="java_kotlin">Java/Kotlin</string>
    <string name="java_kotlin_desc">Java is the primary language used for developing Android apps. Kotlin is another popular language that has been officially supported by Google for Android app development.</string>
    <string name="xml">XML</string>
    <string name="xml_desc">Extensible Markup Language (XML) is used to design the user interface of an Android app.</string>
    <string name="android_sdk">Android SDK</string>
    <string name="android_sdk_desc">Android Software Development Kit (SDK) provides a set of tools and APIs for developing Android apps.</string>
    <string name="java_logo">Java logo</string>
    <string name="kotlin_logo">Kotlin logo</string>
    <string name="tensorflow_desc">A JavaScript library for building and training machine learning models in the browser.</string>
    <string name="tensorflow_js">TensorFlow.js</string>
    <string name="pytorch">PyTorch</string>
    <string name="pytorch_desc">A machine learning library in Python for building and training deep learning models.</string>
    <string name="keras">Keras</string>
    <string name="keras_desc">A high-level neural networks API, written in Python, that runs on top of TensorFlow, CNTK, or Theano.</string>
    <string name="swift">Swift</string>
    <string name="swift_desc">The primary programming language for developing iOS apps.</string>
    <string name="uikit">UIKit</string>
    <string name="uikit_desc">A framework for creating user interfaces on iOS devices.</string>
    <string name="core_graphics">Core Graphics</string>
    <string name="core_graphic_desc">A framework used for rendering 2D graphics in iOS apps.</string>
    <string name="html">HTML</string>
    <string name="html_desc">Hypertext Markup Language (HTML) is used to structure and create the content of a web page.</string>
    <string name="css">CSS</string>
    <string name="css_desc">Cascading Style Sheets (CSS) is used to style and layout web pages.</string>
    <string name="javascript">JavaScript</string>
    <string name="javascript_desc">JavaScript is a client-side programming language that is used to add interactivity to web pages.</string>
    <string name="react">React</string>
    <string name="react_desc">A JavaScript library for building user interfaces that is often used for developing cyber security applications.</string>
    <string name="angular">Angular</string>
    <string name="angular_desc">A JavaScript framework for building web applications that is widely used for cyber security development.</string>
    <string name="vue_js">Vue.js</string>
    <string name="vue_js_desc">A progressive JavaScript framework for building user interfaces that is gaining popularity for cyber security development.</string>
    <string name="react_desc_blockchain">A JavaScript library for building user interfaces that is often used for developing blockchain applications.</string>
    <string name="angular_desc_blockchain">A JavaScript framework for building web applications that is widely used for blockchain development.</string>
    <string name="vue_js_desc_blockchain">A progressive JavaScript framework for building user interfaces that is gaining popularity for blockchain development.</string>
    <string name="django">Django</string>
    <string name="django_desc">A high-level Python web framework used for developing server-side applications in the security domain.</string>
    <string name="flask">Flask</string>
    <string name="flask_desc">A microweb framework in Python that can be used for developing simple and lightweight cyber security applications.</string>
    <string name="ruby_on_rails">Ruby on Rails</string>
    <string name="ruby_on_rails_desc">A server-side web application framework written in Ruby that is often used for cyber security development.</string>
    <string name="ethereum">Ethereum</string>
    <string name="ethereum_desc">An open-source blockchain platform that provides a programming language (Solidity) for writing smart contracts.</string>
    <string name="hyperledger_fabric">Hyperledger Fabric</string>
    <string name="hyperledger_fabric_desc">An open-source blockchain framework and platform for building decentralized applications and networks.</string>
    <string name="eos">EOS</string>
    <string name="eos_desc">A decentralized operating system for building blockchain-based applications.</string>
    <string name="tensorflow">TensorFlow</string>
    <string name="tensorflow_desc_ai_ml">An open-source software library for machine learning and deep learning, used for training and deploying ML models.</string>
    <string name="pytorch_desc_ai_ml">A machine learning library in Python for building and training deep learning models.</string>
    <string name="caffe">Caffe</string>
    <string name="caffe_desc">A deep learning framework developed with clean architecture and expressive code.</string>
    <string name="node_js">Node.js</string>
    <string name="node_js_desc">A server-side JavaScript runtime environment used for building scalable web applications.</string>
    <string name="django_desc_ios">A high-level Python web framework used for developing server-side applications.</string>
    <string name="laravel">Laravel</string>
    <string name="laravel_desc">A PHP web application framework used for building server-side applications.</string>
    <string name="node_js_desc_web">Node.js is a JavaScript-based back-end technology that can be used to build fast and scalable backends for web applications.</string>
    <string name="django_desc_web">Django is a high-level Python web framework that can be used to build backends for web applications.</string>
    <string name="ruby_on_rails_desc_web">Ruby on Rails is a popular back-end framework for web development that is built using the Ruby programming language.</string>
    <string name="firebase">Firebase</string>
    <string name="firebase_desc">Firebase is a backend-as-a-service platform that provides a range of services for Android app development, including real-time databases, authentication, and storage.</string>
    <string name="node_js_desc_android">Node.js is a JavaScript-based back-end technology that can be used to build scalable and fast backends for Android apps.</string>
    <string name="django_desc_android">Django is a high-level Python web framework that can be used to build backends for Android apps.</string>
    <string name="sqlite">SQLite</string>
    <string name="sqlite_desc">SQLite is a lightweight and fast relational database that is built into Android and can be used to store app data.</string>
    <string name="realm">Realm</string>
    <string name="realm_desc">Realm is an object-oriented database that is specifically designed for mobile app development.</string>
    <string name="mysql">MySQL</string>
    <string name="mysql_desc">MySQL is a popular open-source relational database management system that can be used to store data for Android apps.</string>
    <string name="mysql_desc_web">MySQL is a popular open-source relational database management system that is widely used for web development.</string>
    <string name="mongodb">MongoDB</string>
    <string name="mongo_db_desc">MongoDB is a document-oriented NoSQL database that can be used to store unstructured data for web applications.</string>
    <string name="postgresql">PostgreSQL</string>
    <string name="postgresql_desc">PostgreSQL is an open-source object-relational database management system that can be used to store structured data for web applications.</string>
    <string name="sqlite_desc_ios">A file-based relational database management system that is integrated into iOS by default.</string>
    <string name="core_data">Core Data</string>
    <string name="core_data_desc">An object graph management and persistency framework used by iOS apps to manage data.</string>
    <string name="firebase_desc_ios">A real-time NoSQL cloud database that provides APIs for storing and synchronizing data across multiple clients.</string>
    <string name="apache_cassandra">Apache Cassandra</string>
    <string name="apache_desc">A highly scalable and available NoSQL database that is used for storing large amounts of data.</string>
    <string name="apache_hadoop">Apache Hadoop</string>
    <string name="apache_hadoop_desc">An open-source big data processing framework that provides a distributed file system and a framework for batch processing.</string>
    <string name="amazon_s3">Amazon S3</string>
    <string name="amazon_s3_desc">A scalable, high-performance object storage system that is used for storing large amounts of data.</string>
    <string name="interplanetary_file_system_ipfs">InterPlanetary File System (IPFS)</string>
    <string name="interplanetary_file_system_desc">A decentralized file storage system that allows for efficient and secure storage of large amounts of data on the blockchain.</string>
    <string name="bigchaindb">BigChainDB</string>
    <string name="big_chain_db_desc">A scalable blockchain database that allows for high-throughput transactions and low latency.</string>
    <string name="fluree">Fluree</string>
    <string name="fluree_desc">A scalable blockchain database that allows for the creation of decentralized applications.</string>
    <string name="mysql_desc_cyber_security">An open-source relational database management system that is widely used for cyber security applications.</string>
    <string name="microsoft_sql_server">Microsoft SQL Server</string>
    <string name="microsoft_sql_server_desc">A relational database management system developed by Microsoft that is used for cyber security applications.</string>
    <string name="oracle_database">Oracle Database</string>
    <string name="oracle_db_desc">An object-relational database management system developed by Oracle that is widely used for cyber security development.</string>
</resources>