<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DatabasePageAndroid">

    <TextView
        android:id="@+id/PageTitleDatabase"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_margin="7dp"
        android:text="@string/database_technologies" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="7dp"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/DatabaseTechName1"
            android:layout_width="175dp"
            android:layout_height="175dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="13dp"
            android:backgroundTint="@color/teal_200"
            app:cardCornerRadius="250dp">

            <TextView
                android:id="@+id/SQLite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/sqlite"
                android:textSize="25sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/DatabaseTechDesc1"
            android:layout_width="190dp"
            android:layout_height="175dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="13dp"
            android:backgroundTint="@color/teal_200"
            app:cardCornerRadius="20dp">

            <TextView
                android:id="@+id/DescOfSQLite"
                android:layout_width="182dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/sqlite_desc"
                android:textAlignment="center"
                android:textSize="18sp" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="7dp"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/DatabaseTechName2"
            android:layout_width="175dp"
            android:layout_height="175dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="13dp"
            android:backgroundTint="@color/teal_200"
            app:cardCornerRadius="250dp">

            <TextView
                android:id="@+id/Realm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/realm"
                android:textSize="25sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/DatabaseTechDesc2"
            android:layout_width="190dp"
            android:layout_height="175dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="13dp"
            android:backgroundTint="@color/teal_200"
            app:cardCornerRadius="20dp">

            <TextView
                android:id="@+id/DescOfRealm"
                android:layout_width="182dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/realm_desc"
                android:textAlignment="center"
                android:textSize="18sp" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="7dp"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/DatabaseTechName3"
            android:layout_width="175dp"
            android:layout_height="175dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="13dp"
            android:backgroundTint="@color/teal_200"
            app:cardCornerRadius="250dp">

            <TextView
                android:id="@+id/MySQL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/mysql"
                android:textSize="25sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/DatabaseTechDesc3"
            android:layout_width="190dp"
            android:layout_height="175dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="13dp"
            android:backgroundTint="@color/teal_200"
            app:cardCornerRadius="20dp">

            <TextView
                android:id="@+id/DescOfMySQL"
                android:layout_width="182dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/mysql_desc"
                android:textAlignment="center"
                android:textSize="18sp" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>