<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BackEndPageAI_ML">

    <TextView
        android:id="@+id/PageTitleBackEndAIML"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_margin="7dp"
        android:text="@string/back_end_technologies" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="7dp"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/BackEndTechNameAIML1"
            android:layout_width="175dp"
            android:layout_height="175dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="13dp"
            android:backgroundTint="@color/teal_200"
            app:cardCornerRadius="250dp">

            <TextView
                android:id="@+id/TensorFlow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/tensorflow"
                android:textSize="25sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/BackEndTechDescAIML1"
            android:layout_width="190dp"
            android:layout_height="175dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="13dp"
            android:backgroundTint="@color/teal_200"
            app:cardCornerRadius="20dp">

            <TextView
                android:id="@+id/DescOfTensorFlow"
                android:layout_width="182dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/tensorflow_desc_ai_ml"
                android:textAlignment="center"
                android:textSize="18sp" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="7dp"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/BackEndTechNameAIML2"
            android:layout_width="175dp"
            android:layout_height="175dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="13dp"
            android:backgroundTint="@color/teal_200"
            app:cardCornerRadius="250dp">

            <TextView
                android:id="@+id/PyTorch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/pytorch"
                android:textSize="25sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/BackEndTechDescAIML2"
            android:layout_width="190dp"
            android:layout_height="175dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="13dp"
            android:backgroundTint="@color/teal_200"
            app:cardCornerRadius="20dp">

            <TextView
                android:id="@+id/DescOfPyTorch"
                android:layout_width="182dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/pytorch_desc_ai_ml"
                android:textAlignment="center"
                android:textSize="18sp" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="7dp"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/BackEndTechNameAIML3"
            android:layout_width="175dp"
            android:layout_height="175dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="13dp"
            android:backgroundTint="@color/teal_200"
            app:cardCornerRadius="250dp">

            <TextView
                android:id="@+id/Caffe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/caffe"
                android:textSize="25sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/BackEndTechDescAIML3"
            android:layout_width="190dp"
            android:layout_height="175dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="13dp"
            android:backgroundTint="@color/teal_200"
            app:cardCornerRadius="20dp">

            <TextView
                android:id="@+id/DescOfCaffe"
                android:layout_width="182dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/caffe_desc"
                android:textAlignment="center"
                android:textSize="18sp" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>