<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FrontEndPageBlockchain">

    <TextView
        android:id="@+id/PageTitleFrontEndBlockchain"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_margin="7dp"
        android:text="@string/front_end_technologies" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="7dp"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/FrontEndTechNameBlockchain1"
            android:layout_width="175dp"
            android:layout_height="175dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="13dp"
            android:backgroundTint="@color/teal_200"
            app:cardCornerRadius="250dp">

            <TextView
                android:id="@+id/React"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/react"
                android:textSize="25sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/FrontEndTechDescBlockchain1"
            android:layout_width="190dp"
            android:layout_height="175dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="13dp"
            android:backgroundTint="@color/teal_200"
            app:cardCornerRadius="20dp">

            <TextView
                android:id="@+id/DescOfReact"
                android:layout_width="182dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/react_desc_blockchain"
                android:textAlignment="center"
                android:textSize="18sp" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="7dp"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/FrontEndTechNameBlockchain2"
            android:layout_width="175dp"
            android:layout_height="175dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="13dp"
            android:backgroundTint="@color/teal_200"
            app:cardCornerRadius="250dp">

            <TextView
                android:id="@+id/Angular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/angular"
                android:textSize="25sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/FrontEndTechDescBlockchain2"
            android:layout_width="190dp"
            android:layout_height="175dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="13dp"
            android:backgroundTint="@color/teal_200"
            app:cardCornerRadius="20dp">

            <TextView
                android:id="@+id/DescOfAngular"
                android:layout_width="182dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/angular_desc_blockchain"
                android:textAlignment="center"
                android:textSize="18sp" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="7dp"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/FrontEndTechNameBlockchain3"
            android:layout_width="175dp"
            android:layout_height="175dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="13dp"
            android:backgroundTint="@color/teal_200"
            app:cardCornerRadius="250dp">

            <TextView
                android:id="@+id/Vue.js"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/vue_js"
                android:textSize="25sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/FrontEndTechDescBlockchain3"
            android:layout_width="190dp"
            android:layout_height="175dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="13dp"
            android:backgroundTint="@color/teal_200"
            app:cardCornerRadius="20dp">

            <TextView
                android:id="@+id/DescOfVue.js"
                android:layout_width="182dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/vue_js_desc_blockchain"
                android:textAlignment="center"
                android:textSize="18sp" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>